--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
-    "parcel-bundler": "1.6.1"
+    "parcel-bundler": "1.6.1",
+    "prettier": "^3.4.2"
   },
   "devDependencies": {
     "typescript": "4.4.4"
