Even better formatting

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
     "semi": false,
-    "parser": "typescript"
+    "parser": "typescript",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "es5"
 }
