--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prettier": "^3.4.2"
   },
   "devDependencies": {
-    "typescript": "4.4.4"
+    "typescript": "^5.7.2"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
