--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
+    "noUnusedParameters": false, /* I kinda like using these... */
+    "noFallthroughCasesInSwitch": false, /* And these... */
     "noUncheckedSideEffectImports": true
   },
   "include": ["src"]
